2009-08-22  Xan Lopez  <xlopez@igalia.com>

Reviewed by Jan Alonzo.

        https://bugs.webkit.org/show_bug.cgi?id=28154
        clicking below end of text in a textarea moves cursor to wrong position

        Expose the EditingBehavior setting and set it by default to Mac,
        since that what matches the GTK+ default behavior.

        * webkit/webkitprivate.cpp:
        (WebKit::core):
        * webkit/webkitprivate.h:
        * webkit/webkitwebsettings.cpp:
        (webkit_web_settings_class_init):
        (webkit_web_settings_set_property):
        (webkit_web_settings_get_property):
        (webkit_web_settings_copy):
        * webkit/webkitwebsettings.h:
        * webkit/webkitwebview.cpp:
        (webkit_web_view_update_settings):

Canonical link: https://commits.webkit.org/39266@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47687 268f45cc-cd09-0410-ab3c-d52691b4dbfc