WebKit/gtk/webkit/webkitprivate.h
@@ -77,6 +77,8 @@ namespace WebKit {
     WebCore::NavigationType core(WebKitWebNavigationReason reason);
 
     WebCore::ResourceRequest core(WebKitNetworkRequest* request);
+
+    WebCore::EditingBehavior core(WebKitEditingBehavior type);
 }
 
 typedef struct {
